--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="mx.uaemex.prueba">
 
     <application
@@ -26,6 +27,7 @@
         <activity
             android:name=".ConfiguracionActivity"
             android:parentActivityName=".MainActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
